--- a/settings.json
+++ b/settings.json
@@ -1,10 +1,1 @@
-{
-    "settings": [
-        {
-            "input": "speech",
-            "output": "speech",
-            "browser": "chrome"
-        }
-        
-    ]
-}
+{"input":"speech","output":"speech","browser":"chrome"}
