--- a/Website/package.json
+++ b/Website/package.json
@@ -13,7 +13,10 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "multer": "^1.4.2",
-    "socket.io": "^2.3.0"
+    "readline": "^1.3.0",
+    "request": "^2.88.2",
+    "socket.io": "^2.3.0",
+    "util": "^0.12.3"
   },
   "devDependencies": {},
   "keywords": [],
